syntax = "proto3";

package prediction;

option go_package = "github.com/sports-prediction-contests/shared/proto/prediction";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/api/annotations.proto";
import "common.proto";

// Prediction represents a user's prediction for a sports event
message Prediction {
  uint32 id = 1;
  uint32 contest_id = 2;
  uint32 user_id = 3;
  uint32 event_id = 4;
  string prediction_data = 5; // JSON string for flexible prediction data
  string status = 6; // "pending", "scored", "cancelled"
  google.protobuf.Timestamp submitted_at = 7;
  google.protobuf.Timestamp created_at = 8;
  google.protobuf.Timestamp updated_at = 9;
}

// Event represents a sports event that can be predicted
message Event {
  uint32 id = 1;
  string title = 2;
  string sport_type = 3;
  string home_team = 4;
  string away_team = 5;
  google.protobuf.Timestamp event_date = 6;
  string status = 7; // "scheduled", "live", "completed", "cancelled"
  string result_data = 8; // JSON string for event results
  google.protobuf.Timestamp created_at = 9;
  google.protobuf.Timestamp updated_at = 10;
}

// PropType represents a type of prop prediction
message PropType {
  uint32 id = 1;
  string sport_type = 2;
  string name = 3;
  string slug = 4;
  string description = 5;
  string category = 6;
  string value_type = 7;
  double default_line = 8;
  double min_value = 9;
  double max_value = 10;
  double points_correct = 11;
  bool is_active = 12;
}

// PropPrediction represents a props prediction within prediction_data
message PropPrediction {
  uint32 prop_type_id = 1;
  string prop_slug = 2;
  double line = 3;
  string selection = 4;
  string player_id = 5;
}

message GetPropTypesRequest {
  string sport_type = 1;
}

message GetPropTypesResponse {
  common.Response response = 1;
  repeated PropType prop_types = 2;
}

message ListPropTypesRequest {
  string sport_type = 1;
  string category = 2;
  bool active_only = 3;
  common.PaginationRequest pagination = 4;
}

message ListPropTypesResponse {
  common.Response response = 1;
  repeated PropType prop_types = 2;
  common.PaginationResponse pagination = 3;
}

// Time coefficient messages
message GetPotentialCoefficientRequest {
  uint32 event_id = 1;
}

message GetPotentialCoefficientResponse {
  common.Response response = 1;
  double coefficient = 2;
  string tier = 3;
  double hours_until_event = 4;
}

// Risky Event Types
message RiskyEventType {
  uint32 id = 1;
  string slug = 2;
  string name = 3;
  string name_en = 4;
  string description = 5;
  double default_points = 6;
  string sport_type = 7;
  string category = 8;
  string icon = 9;
  int32 sort_order = 10;
  bool is_active = 11;
}

message ListRiskyEventTypesRequest {
  string sport_type = 1;
  bool include_inactive = 2;  // admin only
}

message ListRiskyEventTypesResponse {
  common.Response response = 1;
  repeated RiskyEventType event_types = 2;
}

message CreateRiskyEventTypeRequest {
  string slug = 1;
  string name = 2;
  string name_en = 3;
  string description = 4;
  double default_points = 5;
  string sport_type = 6;
  string category = 7;
  string icon = 8;
  int32 sort_order = 9;
}

message CreateRiskyEventTypeResponse {
  common.Response response = 1;
  RiskyEventType event_type = 2;
}

message UpdateRiskyEventTypeRequest {
  uint32 id = 1;
  string name = 2;
  string name_en = 3;
  string description = 4;
  double default_points = 5;
  string category = 6;
  string icon = 7;
  int32 sort_order = 8;
  bool is_active = 9;
}

message UpdateRiskyEventTypeResponse {
  common.Response response = 1;
  RiskyEventType event_type = 2;
}

message DeleteRiskyEventTypeRequest {
  uint32 id = 1;
}

// Match Risky Events (per-match overrides)
message MatchRiskyEvent {
  uint32 risky_event_type_id = 1;
  string slug = 2;
  string name = 3;
  string name_en = 4;
  string icon = 5;
  string category = 6;
  double points = 7;         // Final points with overrides applied
  bool is_enabled = 8;
  optional bool outcome = 9; // nil=pending, true=happened, false=didn't
  bool is_overridden = 10;   // True if points differ from default
}

message GetMatchRiskyEventsRequest {
  uint32 event_id = 1;
  uint32 contest_id = 2;     // For contest-level overrides
}

message GetMatchRiskyEventsResponse {
  common.Response response = 1;
  repeated MatchRiskyEvent events = 2;
  int32 max_selections = 3;
}

message SetMatchRiskyEventOverrideRequest {
  uint32 event_id = 1;
  uint32 risky_event_type_id = 2;
  double points = 3;
  bool is_enabled = 4;
}

message SetMatchRiskyEventOverrideResponse {
  common.Response response = 1;
}

message SetMatchRiskyEventOutcomeRequest {
  uint32 event_id = 1;
  uint32 risky_event_type_id = 2;
  bool happened = 3;
}

message SetMatchRiskyEventOutcomeResponse {
  common.Response response = 1;
}

// Request messages
message SubmitPredictionRequest {
  uint32 contest_id = 1;
  uint32 event_id = 2;
  string prediction_data = 3;
}

message GetPredictionRequest {
  uint32 id = 1;
}

message GetUserPredictionsRequest {
  uint32 contest_id = 1;
  common.PaginationRequest pagination = 2;
}

message UpdatePredictionRequest {
  uint32 id = 1;
  string prediction_data = 2;
}

message DeletePredictionRequest {
  uint32 id = 1;
}

message CreateEventRequest {
  string title = 1;
  string sport_type = 2;
  string home_team = 3;
  string away_team = 4;
  google.protobuf.Timestamp event_date = 5;
}

message GetEventRequest {
  uint32 id = 1;
}

message ListEventsRequest {
  string sport_type = 1;
  string status = 2;
  common.PaginationRequest pagination = 3;
  uint32 contest_id = 4;  // Filter events by contest (optional)
}

message UpdateEventRequest {
  uint32 id = 1;
  string title = 2;
  string home_team = 3;
  string away_team = 4;
  google.protobuf.Timestamp event_date = 5;
  string status = 6;
  string result_data = 7;
}

// Response messages
message SubmitPredictionResponse {
  common.Response response = 1;
  Prediction prediction = 2;
}

message GetPredictionResponse {
  common.Response response = 1;
  Prediction prediction = 2;
}

message GetUserPredictionsResponse {
  common.Response response = 1;
  repeated Prediction predictions = 2;
  common.PaginationResponse pagination = 3;
}

message UpdatePredictionResponse {
  common.Response response = 1;
  Prediction prediction = 2;
}

message DeletePredictionResponse {
  common.Response response = 1;
}

message CreateEventResponse {
  common.Response response = 1;
  Event event = 2;
}

message GetEventResponse {
  common.Response response = 1;
  Event event = 2;
}

message ListEventsResponse {
  common.Response response = 1;
  repeated Event events = 2;
  common.PaginationResponse pagination = 3;
}

message UpdateEventResponse {
  common.Response response = 1;
  Event event = 2;
}

// Prediction Service
service PredictionService {
  // Prediction management
  rpc SubmitPrediction(SubmitPredictionRequest) returns (SubmitPredictionResponse) {
    option (google.api.http) = {
      post: "/v1/predictions"
      body: "*"
    };
  }
  rpc GetPrediction(GetPredictionRequest) returns (GetPredictionResponse) {
    option (google.api.http) = {
      get: "/v1/predictions/{id}"
    };
  }
  rpc GetUserPredictions(GetUserPredictionsRequest) returns (GetUserPredictionsResponse) {
    option (google.api.http) = {
      get: "/v1/predictions/contest/{contest_id}"
    };
  }
  rpc UpdatePrediction(UpdatePredictionRequest) returns (UpdatePredictionResponse) {
    option (google.api.http) = {
      put: "/v1/predictions/{id}"
      body: "*"
    };
  }
  rpc DeletePrediction(DeletePredictionRequest) returns (DeletePredictionResponse) {
    option (google.api.http) = {
      delete: "/v1/predictions/{id}"
    };
  }
  
  // Event management
  rpc CreateEvent(CreateEventRequest) returns (CreateEventResponse) {
    option (google.api.http) = {
      post: "/v1/events"
      body: "*"
    };
  }
  rpc GetEvent(GetEventRequest) returns (GetEventResponse) {
    option (google.api.http) = {
      get: "/v1/events/{id}"
    };
  }
  rpc ListEvents(ListEventsRequest) returns (ListEventsResponse) {
    option (google.api.http) = {
      get: "/v1/events"
    };
  }
  rpc UpdateEvent(UpdateEventRequest) returns (UpdateEventResponse) {
    option (google.api.http) = {
      put: "/v1/events/{id}"
      body: "*"
    };
  }
  
  // Prop types
  rpc GetPropTypes(GetPropTypesRequest) returns (GetPropTypesResponse) {
    option (google.api.http) = {
      get: "/v1/prop-types/{sport_type}"
    };
  }
  rpc ListPropTypes(ListPropTypesRequest) returns (ListPropTypesResponse) {
    option (google.api.http) = {
      get: "/v1/prop-types"
    };
  }
  
  // Time coefficient
  rpc GetPotentialCoefficient(GetPotentialCoefficientRequest) returns (GetPotentialCoefficientResponse) {
    option (google.api.http) = {
      get: "/v1/events/{event_id}/coefficient"
    };
  }
  
  // Health check
  rpc Check(google.protobuf.Empty) returns (common.Response) {
    option (google.api.http) = {
      get: "/v1/predictions/health"
    };
  }
  
  // Risky Event Types (global)
  rpc ListRiskyEventTypes(ListRiskyEventTypesRequest) returns (ListRiskyEventTypesResponse) {
    option (google.api.http) = {
      get: "/v1/risky-event-types"
    };
  }
  rpc CreateRiskyEventType(CreateRiskyEventTypeRequest) returns (CreateRiskyEventTypeResponse) {
    option (google.api.http) = {
      post: "/v1/risky-event-types"
      body: "*"
    };
  }
  rpc UpdateRiskyEventType(UpdateRiskyEventTypeRequest) returns (UpdateRiskyEventTypeResponse) {
    option (google.api.http) = {
      put: "/v1/risky-event-types/{id}"
      body: "*"
    };
  }
  rpc DeleteRiskyEventType(DeleteRiskyEventTypeRequest) returns (common.Response) {
    option (google.api.http) = {
      delete: "/v1/risky-event-types/{id}"
    };
  }
  
  // Match Risky Events (per-match)
  rpc GetMatchRiskyEvents(GetMatchRiskyEventsRequest) returns (GetMatchRiskyEventsResponse) {
    option (google.api.http) = {
      get: "/v1/events/{event_id}/risky-events"
    };
  }
  rpc SetMatchRiskyEventOverride(SetMatchRiskyEventOverrideRequest) returns (SetMatchRiskyEventOverrideResponse) {
    option (google.api.http) = {
      post: "/v1/events/{event_id}/risky-events/{risky_event_type_id}"
      body: "*"
    };
  }
  rpc SetMatchRiskyEventOutcome(SetMatchRiskyEventOutcomeRequest) returns (SetMatchRiskyEventOutcomeResponse) {
    option (google.api.http) = {
      put: "/v1/events/{event_id}/risky-events/{risky_event_type_id}/outcome"
      body: "*"
    };
  }
}
